src/OpenCvSharp.Native/include/open_cv_sharp/features2d/features2d.h

typedef struct jyppx_ocv_features2d_descriptor_matcher jyppx_ocv_features2d_descriptor_matcher;
typedef struct jyppx_ocv_features2d_bf_matcher jyppx_ocv_features2d_bf_matcher;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_match_count(
    const jyppx_ocv_features2d_descriptor_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    const jyppx_ocv_mat* train_descriptors,
    const jyppx_ocv_mat* mask,
    int* match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_match_fill(
    const jyppx_ocv_features2d_descriptor_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    const jyppx_ocv_mat* train_descriptors,
    const jyppx_ocv_mat* mask,
    jyppx_ocv_dmatch* matches,
    int match_capacity,
    int* match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_match_train_count(
    const jyppx_ocv_features2d_descriptor_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    const jyppx_ocv_mat* const* masks,
    int mask_count,
    int* match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_match_train_fill(
    const jyppx_ocv_features2d_descriptor_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    const jyppx_ocv_mat* const* masks,
    int mask_count,
    jyppx_ocv_dmatch* matches,
    int match_capacity,
    int* match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_knn_match_count(
    const jyppx_ocv_features2d_descriptor_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    const jyppx_ocv_mat* train_descriptors,
    int k,
    const jyppx_ocv_mat* mask,
    int compact_result,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_knn_match_fill(
    const jyppx_ocv_features2d_descriptor_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    const jyppx_ocv_mat* train_descriptors,
    int k,
    const jyppx_ocv_mat* mask,
    int compact_result,
    int* offsets,
    int offset_capacity,
    jyppx_ocv_dmatch* matches,
    int match_capacity,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_knn_match_train_count(
    const jyppx_ocv_features2d_descriptor_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    int k,
    const jyppx_ocv_mat* const* masks,
    int mask_count,
    int compact_result,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_knn_match_train_fill(
    const jyppx_ocv_features2d_descriptor_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    int k,
    const jyppx_ocv_mat* const* masks,
    int mask_count,
    int compact_result,
    int* offsets,
    int offset_capacity,
    jyppx_ocv_dmatch* matches,
    int match_capacity,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_radius_match_count(
    const jyppx_ocv_features2d_descriptor_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    const jyppx_ocv_mat* train_descriptors,
    float max_distance,
    const jyppx_ocv_mat* mask,
    int compact_result,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_radius_match_fill(
    const jyppx_ocv_features2d_descriptor_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    const jyppx_ocv_mat* train_descriptors,
    float max_distance,
    const jyppx_ocv_mat* mask,
    int compact_result,
    int* offsets,
    int offset_capacity,
    jyppx_ocv_dmatch* matches,
    int match_capacity,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_radius_match_train_count(
    const jyppx_ocv_features2d_descriptor_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    float max_distance,
    const jyppx_ocv_mat* const* masks,
    int mask_count,
    int compact_result,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_descriptor_matcher_radius_match_train_fill(
    const jyppx_ocv_features2d_descriptor_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    float max_distance,
    const jyppx_ocv_mat* const* masks,
    int mask_count,
    int compact_result,
    int* offsets,
    int offset_capacity,
    jyppx_ocv_dmatch* matches,
    int match_capacity,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_get_train_descriptors_count(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    int* descriptor_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_get_train_descriptor_clone(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    int index,
    jyppx_ocv_mat** descriptor);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_match_count(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    const jyppx_ocv_mat* train_descriptors,
    const jyppx_ocv_mat* mask,
    int* match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_match_fill(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    const jyppx_ocv_mat* train_descriptors,
    const jyppx_ocv_mat* mask,
    jyppx_ocv_dmatch* matches,
    int match_capacity,
    int* match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_match_train_count(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    int* match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_match_train_fill(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    jyppx_ocv_dmatch* matches,
    int match_capacity,
    int* match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_match_train_with_masks_count(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    const jyppx_ocv_mat* const* masks,
    int mask_count,
    int* match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_match_train_with_masks_fill(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    const jyppx_ocv_mat* const* masks,
    int mask_count,
    jyppx_ocv_dmatch* matches,
    int match_capacity,
    int* match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_knn_match_count(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    const jyppx_ocv_mat* train_descriptors,
    int k,
    const jyppx_ocv_mat* mask,
    int compact_result,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_knn_match_fill(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    const jyppx_ocv_mat* train_descriptors,
    int k,
    const jyppx_ocv_mat* mask,
    int compact_result,
    int* offsets,
    int offset_capacity,
    jyppx_ocv_dmatch* matches,
    int match_capacity,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_knn_match_train_count(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    int k,
    int compact_result,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_knn_match_train_fill(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    int k,
    int compact_result,
    int* offsets,
    int offset_capacity,
    jyppx_ocv_dmatch* matches,
    int match_capacity,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_knn_match_train_with_masks_count(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    int k,
    const jyppx_ocv_mat* const* masks,
    int mask_count,
    int compact_result,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_knn_match_train_with_masks_fill(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    int k,
    const jyppx_ocv_mat* const* masks,
    int mask_count,
    int compact_result,
    int* offsets,
    int offset_capacity,
    jyppx_ocv_dmatch* matches,
    int match_capacity,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_radius_match_count(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    const jyppx_ocv_mat* train_descriptors,
    float max_distance,
    const jyppx_ocv_mat* mask,
    int compact_result,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_radius_match_fill(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    const jyppx_ocv_mat* train_descriptors,
    float max_distance,
    const jyppx_ocv_mat* mask,
    int compact_result,
    int* offsets,
    int offset_capacity,
    jyppx_ocv_dmatch* matches,
    int match_capacity,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_radius_match_train_count(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    float max_distance,
    int compact_result,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_radius_match_train_fill(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    float max_distance,
    int compact_result,
    int* offsets,
    int offset_capacity,
    jyppx_ocv_dmatch* matches,
    int match_capacity,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_radius_match_train_with_masks_count(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    float max_distance,
    const jyppx_ocv_mat* const* masks,
    int mask_count,
    int compact_result,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_bf_matcher_radius_match_train_with_masks_fill(
    const jyppx_ocv_features2d_bf_matcher* matcher,
    const jyppx_ocv_mat* query_descriptors,
    float max_distance,
    const jyppx_ocv_mat* const* masks,
    int mask_count,
    int compact_result,
    int* offsets,
    int offset_capacity,
    jyppx_ocv_dmatch* matches,
    int match_capacity,
    int* group_count,
    int* total_match_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_draw_keypoints(
    const jyppx_ocv_mat* image,
    const jyppx_ocv_key_point* keypoints,
    int keypoint_count,
    jyppx_ocv_mat* out_image,
    double color_v0,
    double color_v1,
    double color_v2,
    double color_v3,
    int flags);