src/OpenCvSharp/Internal/Interop/NativeMethods.Features2D.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_get_train_descriptors_count")]
        internal static extern int Features2DBFMatcherGetTrainDescriptorsCount(IntPtr matcher, out int descriptorCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_get_train_descriptor_clone")]
        internal static extern int Features2DBFMatcherGetTrainDescriptorClone(IntPtr matcher, int index, out IntPtr descriptor);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_match_count")]
        internal static extern int Features2DDescriptorMatcherMatchCount(IntPtr matcher, IntPtr queryDescriptors, IntPtr trainDescriptors, IntPtr mask, out int matchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_match_fill")]
        internal static extern int Features2DDescriptorMatcherMatchFill(IntPtr matcher, IntPtr queryDescriptors, IntPtr trainDescriptors, IntPtr mask, NativeDMatch* matches, int matchCapacity, out int matchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_match_train_count")]
        internal static extern int Features2DDescriptorMatcherMatchTrainCount(IntPtr matcher, IntPtr queryDescriptors, IntPtr* masks, int maskCount, out int matchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_match_train_fill")]
        internal static extern int Features2DDescriptorMatcherMatchTrainFill(IntPtr matcher, IntPtr queryDescriptors, IntPtr* masks, int maskCount, NativeDMatch* matches, int matchCapacity, out int matchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_knn_match_count")]
        internal static extern int Features2DDescriptorMatcherKnnMatchCount(IntPtr matcher, IntPtr queryDescriptors, IntPtr trainDescriptors, int k, IntPtr mask, int compactResult, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_knn_match_fill")]
        internal static extern int Features2DDescriptorMatcherKnnMatchFill(IntPtr matcher, IntPtr queryDescriptors, IntPtr trainDescriptors, int k, IntPtr mask, int compactResult, int* offsets, int offsetCapacity, NativeDMatch* matches, int matchCapacity, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_knn_match_train_count")]
        internal static extern int Features2DDescriptorMatcherKnnMatchTrainCount(IntPtr matcher, IntPtr queryDescriptors, int k, IntPtr* masks, int maskCount, int compactResult, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_knn_match_train_fill")]
        internal static extern int Features2DDescriptorMatcherKnnMatchTrainFill(IntPtr matcher, IntPtr queryDescriptors, int k, IntPtr* masks, int maskCount, int compactResult, int* offsets, int offsetCapacity, NativeDMatch* matches, int matchCapacity, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_radius_match_count")]
        internal static extern int Features2DDescriptorMatcherRadiusMatchCount(IntPtr matcher, IntPtr queryDescriptors, IntPtr trainDescriptors, float maxDistance, IntPtr mask, int compactResult, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_radius_match_fill")]
        internal static extern int Features2DDescriptorMatcherRadiusMatchFill(IntPtr matcher, IntPtr queryDescriptors, IntPtr trainDescriptors, float maxDistance, IntPtr mask, int compactResult, int* offsets, int offsetCapacity, NativeDMatch* matches, int matchCapacity, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_radius_match_train_count")]
        internal static extern int Features2DDescriptorMatcherRadiusMatchTrainCount(IntPtr matcher, IntPtr queryDescriptors, float maxDistance, IntPtr* masks, int maskCount, int compactResult, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_radius_match_train_fill")]
        internal static extern int Features2DDescriptorMatcherRadiusMatchTrainFill(IntPtr matcher, IntPtr queryDescriptors, float maxDistance, IntPtr* masks, int maskCount, int compactResult, int* offsets, int offsetCapacity, NativeDMatch* matches, int matchCapacity, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_match_count")]
        internal static extern int Features2DBFMatcherMatchCount(IntPtr matcher, IntPtr queryDescriptors, IntPtr trainDescriptors, IntPtr mask, out int matchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_match_fill")]
        internal static extern int Features2DBFMatcherMatchFill(IntPtr matcher, IntPtr queryDescriptors, IntPtr trainDescriptors, IntPtr mask, NativeDMatch* matches, int matchCapacity, out int matchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_match_train_count")]
        internal static extern int Features2DBFMatcherMatchTrainCount(IntPtr matcher, IntPtr queryDescriptors, out int matchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_match_train_fill")]
        internal static extern int Features2DBFMatcherMatchTrainFill(IntPtr matcher, IntPtr queryDescriptors, NativeDMatch* matches, int matchCapacity, out int matchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_match_train_with_masks_count")]
        internal static extern int Features2DBFMatcherMatchTrainWithMasksCount(IntPtr matcher, IntPtr queryDescriptors, IntPtr* masks, int maskCount, out int matchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_match_train_with_masks_fill")]
        internal static extern int Features2DBFMatcherMatchTrainWithMasksFill(IntPtr matcher, IntPtr queryDescriptors, IntPtr* masks, int maskCount, NativeDMatch* matches, int matchCapacity, out int matchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_knn_match_count")]
        internal static extern int Features2DBFMatcherKnnMatchCount(IntPtr matcher, IntPtr queryDescriptors, IntPtr trainDescriptors, int k, IntPtr mask, int compactResult, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_knn_match_fill")]
        internal static extern int Features2DBFMatcherKnnMatchFill(IntPtr matcher, IntPtr queryDescriptors, IntPtr trainDescriptors, int k, IntPtr mask, int compactResult, int* offsets, int offsetCapacity, NativeDMatch* matches, int matchCapacity, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_knn_match_train_count")]
        internal static extern int Features2DBFMatcherKnnMatchTrainCount(IntPtr matcher, IntPtr queryDescriptors, int k, int compactResult, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_knn_match_train_fill")]
        internal static extern int Features2DBFMatcherKnnMatchTrainFill(IntPtr matcher, IntPtr queryDescriptors, int k, int compactResult, int* offsets, int offsetCapacity, NativeDMatch* matches, int matchCapacity, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_knn_match_train_with_masks_count")]
        internal static extern int Features2DBFMatcherKnnMatchTrainWithMasksCount(IntPtr matcher, IntPtr queryDescriptors, int k, IntPtr* masks, int maskCount, int compactResult, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_knn_match_train_with_masks_fill")]
        internal static extern int Features2DBFMatcherKnnMatchTrainWithMasksFill(IntPtr matcher, IntPtr queryDescriptors, int k, IntPtr* masks, int maskCount, int compactResult, int* offsets, int offsetCapacity, NativeDMatch* matches, int matchCapacity, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_radius_match_count")]
        internal static extern int Features2DBFMatcherRadiusMatchCount(IntPtr matcher, IntPtr queryDescriptors, IntPtr trainDescriptors, float maxDistance, IntPtr mask, int compactResult, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_radius_match_fill")]
        internal static extern int Features2DBFMatcherRadiusMatchFill(IntPtr matcher, IntPtr queryDescriptors, IntPtr trainDescriptors, float maxDistance, IntPtr mask, int compactResult, int* offsets, int offsetCapacity, NativeDMatch* matches, int matchCapacity, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_radius_match_train_count")]
        internal static extern int Features2DBFMatcherRadiusMatchTrainCount(IntPtr matcher, IntPtr queryDescriptors, float maxDistance, int compactResult, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_radius_match_train_fill")]
        internal static extern int Features2DBFMatcherRadiusMatchTrainFill(IntPtr matcher, IntPtr queryDescriptors, float maxDistance, int compactResult, int* offsets, int offsetCapacity, NativeDMatch* matches, int matchCapacity, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_radius_match_train_with_masks_count")]
        internal static extern int Features2DBFMatcherRadiusMatchTrainWithMasksCount(IntPtr matcher, IntPtr queryDescriptors, float maxDistance, IntPtr* masks, int maskCount, int compactResult, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_radius_match_train_with_masks_fill")]
        internal static extern int Features2DBFMatcherRadiusMatchTrainWithMasksFill(IntPtr matcher, IntPtr queryDescriptors, float maxDistance, IntPtr* masks, int maskCount, int compactResult, int* offsets, int offsetCapacity, NativeDMatch* matches, int matchCapacity, out int groupCount, out int totalMatchCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_draw_keypoints")]
        internal static extern int Features2DDrawKeypoints(IntPtr image, NativeKeyPoint* keypoints, int keypointCount, IntPtr outImage, double colorV0, double colorV1, double colorV2, double colorV3, int flags);
